added 'get in touch' section and footer

--- a/index.html
+++ b/index.html
@@ -48,12 +48,41 @@
     <div class="col-lg-4 col-md-4 col-sm-12">
       <h3 class="feature-title">Getting familiar</h3>
       <img src="images/column-2.jpg" class="img-fluid">
-      <p>The most important part of a deck of cards are, of course, the cards. You want to get the feel of the cards and leave <i>control</i> over your cards. Establish the fact that this is now <i>your</i> deck of cards that and <i>you</i> will master cardistry with it.</p>
+      <p>The most important part of a deck of cards are, of course, the cards. You want to get the feel of the cards and leave <i>control</i> over your cards. Establish the fact that this is now <i>your</i> deck of cards and <i>you</i> will master cardistry with it.</p>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-12">
     </div>
-  </div>
+    </div>
+    <h3 class="feature-title">Get in Touch!</h3>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Name" name="">
+    </div>
+    <div class="form-group">
+      <input type="email" class="form-control" placeholder="Email Address" name="email">
+    </div>
+    <div class="form-group">
+      <textarea class="form-control" rows="4"></textarea>
+    </div>
+    <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
 </div>
+
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-12">
+      <h6 class="text-uppercase font-weight-bold">Additional Information</h6>
+      <p>Get a full introduction to cardistry and card magic. Read and get a better understanding of the possibilities the world of cards offer</p>
+      <p>Made with care and love by <a href="https://nhat-nam.github.io/">me</a></p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-12">
+      <h6 class="text-uppercase font-weight-bold">Contact</h6>
+      <p>123 Dao Street, Dao Valley, Dao-llywood
+      <br/>nhatnamdao@gmail.com
+      <br/>+ 84 899 473 130</p>
+    </div>
+  </div>
+  <div class="footer-copyright text-center">© 2020 Copyright</div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
